--- a/board.css
+++ b/board.css
@@ -87,41 +87,39 @@ button {
   justify-content: center;
   align-items: center;
 }
-.board-detail-list{
+.board-detail-list {
   width: 100%;
   border: 1px solid #006241;
   background-color: #fff;
   height: auto;
   min-height: 100px;
 }
-.board-detail-list h2{
-margin: 10px 0;
-
+.board-detail-list h2 {
+  margin: 10px 0;
 }
-.mx-10 div{
+.mx-10 div {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
 
-.mx-10{
+.mx-10 {
   margin: 10px;
   display: flex;
   flex-direction: column !important;
 }
-.mx-10 h2{
+.mx-10 h2 {
   font-size: 14px;
 }
-.mx-10 time{
+.mx-10 time {
   font-size: 11px;
   color: #a6a6a6;
 }
-.mx-10 span{
+.mx-10 span {
   font-size: 11px;
   margin-left: 5px;
 }
-.mx-10 p{
+.mx-10 p {
   margin: 5px 0 !important;
   font-size: 12px;
   color: #a6a6a6;
@@ -140,4 +138,26 @@ margin: 10px 0;
   height: 60px;
   display: flex;
   align-items: center;
+}
+.contents-board-right-search {
+  box-sizing: border-box;
+  background-color: #fff;
+  border: 2px solid #e0e0e0;
+  height: 50px;
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.contents-board-right-search input {
+  border: none;
+  height: 40px;
+  outline: none;
+  margin: 0 5px 0 10px;
+  width: 75%;
+}
+.right-serach-btn {
+  width: 20%;
+  height: 100%;
+  border: none;
 }
