--- a/board.css
+++ b/board.css
@@ -63,9 +63,14 @@ button {
   justify-content: space-between;
   min-width: 1165px;
 }
-
+.contents-board-left {
+  width: 17%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
 .contents-board-center {
-  width: 67%;
+  width: 47%;
   display: flex;
   flex-direction: column;
   row-gap: 10px;
@@ -87,39 +92,41 @@ button {
   justify-content: center;
   align-items: center;
 }
-.board-detail-list {
+.board-detail-list{
   width: 100%;
   border: 1px solid #006241;
   background-color: #fff;
   height: auto;
   min-height: 100px;
 }
-.board-detail-list h2 {
-  margin: 10px 0;
+.board-detail-list h2{
+margin: 10px 0;
+
 }
-.mx-10 div {
+.mx-10 div{
   display: flex;
   justify-content: space-between;
   align-items: center;
+
 }
 
-.mx-10 {
+.mx-10{
   margin: 10px;
   display: flex;
   flex-direction: column !important;
 }
-.mx-10 h2 {
+.mx-10 h2{
   font-size: 14px;
 }
-.mx-10 time {
+.mx-10 time{
   font-size: 11px;
   color: #a6a6a6;
 }
-.mx-10 span {
+.mx-10 span{
   font-size: 11px;
   margin-left: 5px;
 }
-.mx-10 p {
+.mx-10 p{
   margin: 5px 0 !important;
   font-size: 12px;
   color: #a6a6a6;
@@ -139,25 +146,81 @@ button {
   display: flex;
   align-items: center;
 }
-.contents-board-right-search {
+.accout-form {
+  width: 100%;
+  border: 1px solid lightgray;
   box-sizing: border-box;
-  background-color: #fff;
-  border: 2px solid #e0e0e0;
-  height: 50px;
-  outline: none;
+  background-color: #f9f9f9;
+  height: auto;
+  min-height: 100px;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
 }
-.contents-board-right-search input {
-  border: none;
+.accout-form p {
+  margin: 20px 10px;
+  word-break: keep-all;
+  text-align: center;
+  line-height: 22px;
+}
+.accout-form p span {
+  color: #006241;
+  font-weight: bold;
+}
+.accout-form button {
+  width: 90%;
+}
+.form-btn-login {
+  background-color: #fff;
+  border-radius: 3px;
+  border: 1px solid lightgray;
+  margin: 6px 0;
   height: 40px;
-  outline: none;
-  margin: 0 5px 0 10px;
-  width: 75%;
+  color: #006241;
 }
-.right-serach-btn {
-  width: 20%;
-  height: 100%;
-  border: none;
+
+.form-btn-sign {
+  background-color: #006241;
+  border-radius: 3px;
+  border: 1px solid lightgray;
+  margin-bottom: 6px;
+  height: 40px;
+  color: #fff;
+}
+.contents-left-banner1 {
+  background: url(./img/su-jpf.png);
+  min-height: 130px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.contents-left-banner2 {
+  background: url(./img/inno.png);
+  min-height: 130px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.board-nav{
+  width: 100%;
+  border: 1px solid #006241;
+  background-color: #fff;
+  height: auto;
+  min-height: 250px;
+  background-color: #006241;
+  box-sizing: border-box;
+}
+.board-nav ul li a{
+  text-decoration:none; 
+  color: white;
+}
+.board-nav ul li{
+  list-style-type: none;
+  margin-top: 3px;
+  padding: 0;
+}
+.board-nav ul li:hover {
+  background-color: lightsteelblue;
 }
