--- a/board.css
+++ b/board.css
@@ -211,6 +211,19 @@ margin: 10px 0;
   min-height: 250px;
   background-color: #006241;
   box-sizing: border-box;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+}
+.board-nav ul {
+  padding: 0 !important;
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
 }
 .board-nav ul li a{
   text-decoration:none; 
@@ -218,9 +231,8 @@ margin: 10px 0;
 }
 .board-nav ul li{
   list-style-type: none;
-  margin-top: 3px;
   padding: 0;
 }
-.board-nav ul li:hover {
-  background-color: lightsteelblue;
+.board-nav ul li a:hover {
+  color: gray;
 }
